--- a/mifosng-android/build.gradle
+++ b/mifosng-android/build.gradle
@@ -131,6 +131,10 @@ android {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 task buildAndEMailAPK(type: Exec, description: 'Builds and Generates a Signed APK and emails it') {
@@ -148,7 +152,7 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
     // You must install or update the Support Repository through the SDK manager to use this dependency.
 
@@ -157,7 +161,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     //DBFlow dependencies
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     annotationProcessor "com.github.Raizlabs.DBFlow.dbflow:dbflow-processor:3.1.1"
     annotationProcessor "com.github.Raizlabs.DBFlow:dbflow-processor:3.1.1"
     //annotationProcessor "com.github.Raizlabs.DBFlow.dbflow-core:dbflow-processor:$rootProject.raizLabsDBFlow"
@@ -168,9 +172,9 @@ dependencies {
     //implementation "com.github.Raizlabs.DBFlow:dbflow:$rootProject.raizLabsDBFlow"
 
     // App's Support dependencies, including test
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation "com.google.android.gms:play-services-places:$rootProject.playServicesVersion"
@@ -191,11 +195,11 @@ dependencies {
     kapt "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
 
     //LifeCycle
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.3.1'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.3.1'
 
     //Square dependencies
     implementation("com.squareup.retrofit2:retrofit:$rootProject.retrofitVersionLatest") {
@@ -212,7 +216,7 @@ dependencies {
     implementation 'javax.annotation:jsr250-api:1.0@jar'
 
     implementation 'io.reactivex:rxandroid:1.1.0'
-    implementation 'io.reactivex:rxjava:1.1.4'
+    implementation 'io.reactivex:rxjava:1.3.8'
 
     implementation 'com.facebook.stetho:stetho:1.3.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
@@ -243,7 +247,7 @@ dependencies {
     }
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:1.10.19'
 
     //Android-Jobs
@@ -262,9 +266,9 @@ excluded from the test APK! This is necessary because both APKs will contain the
 excluding these dependencies from your test configuration will result in an dex pre-verifier error
 at runtime. More info in this tools bug: (https://code.google.com/p/android/issues/detail?id=192497)
 */
-configurations.compile.dependencies.each { compileDependency ->
-    println "Excluding compile dependency: ${compileDependency.getName()}"
-    configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
-        configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
-    }
-}
+//configurations.compile.dependencies.each { compileDependency ->
+//    println "Excluding compile dependency: ${compileDependency.getName()}"
+//    configurations.androidTestCompile.dependencies.each { androidTestCompileDependency ->
+//        configurations.androidTestCompile.exclude module: "${compileDependency.getName()}"
+//    }
+//}
