--- a/mifosng-android/build.gradle
+++ b/mifosng-android/build.gradle
@@ -258,6 +258,9 @@ dependencies {
 
     //card view
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    //biometric
+    implementation "androidx.biometric:biometric:1.1.0"
 }
 
 /*
