--- a/mifosng-android/src/main/AndroidManifest.xml
+++ b/mifosng-android/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -19,7 +21,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/MaterialAppTheme">
-        <activity android:name=".online.checkerinbox.CheckerInboxPendingTasksActivity"></activity>
+        <activity android:name=".passcode.NewPassCodeActivity"></activity>
+        <activity android:name=".online.checkerinbox.CheckerInboxPendingTasksActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -64,8 +67,8 @@
         <activity
             android:name=".online.CentersActivity"
             android:label="@string/title_activity_centers"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".online.DashboardActivity">
+            android:parentActivityName=".online.DashboardActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".online.DashboardActivity" />
@@ -137,8 +140,8 @@
             android:name=".passcode.PassCodeActivity"
             android:label="@string/pass_code"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".AboutActivity"
+        <activity
+            android:name=".AboutActivity"
             android:label="@string/about"
             android:screenOrientation="portrait" />
 
